--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -16,21 +16,23 @@
     "@mui/x-data-grid": "^5.17.26",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/auth0": "^2.35.9",
+    "amqplib": "^0.10.3",
     "dependencies": "^0.0.1",
     "firebase": "^9.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.8.1"
+    "react-router-dom": "^6.8.1",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.6",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5",
     "vite": "^3.2.3"
   }
